syntax = "proto3";

message MtTransfer {
    string class = 1;
    string id = 2;
    bytes data = 3;
    string sender = 4;
    string receiver = 5;
    bool awayFromOrigin  = 6;
    string destContract  = 7;
    uint64 amount = 8;
}
       